force-app/main/default/objects/Application__c/fields/Personnel_Budget__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Budget__c</fullName>
    <label>Personnel Budget</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>