force-app/main/default/objects/Application__c/fields/Personnel_Description__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Description__c</fullName>
    <label>Personnel Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>