force-app/main/default/objects/Application__c/fields/Philanthropic_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Philanthropic_Pillar__c</fullName>
    <label>Philanthropic Pillar</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mentorship</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>