force-app/main/default/objects/Application__c/fields/Plan_to_Connect_Youth_with_Adult_Mentors__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_Connect_Youth_with_Adult_Mentors__c</fullName>
    <label>Plan to Connect Youth with Adult Mentors</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>