force-app/main/default/objects/Application__c/fields/POC_Can_Receive_Communication__c.field-meta.xml
<CustomField>
    <fullName>POC_Can_Receive_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POC Can Receive Communication</label>
    <type>Checkbox</type>
</CustomField>