force-app/main/default/objects/Application__c/fields/Previous_Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Award_Amount__c</fullName>
    <label>Previous Award Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>