force-app/main/default/objects/Application__c/fields/Previous_Challenges_Recruitment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Previous_Challenges_Recruitment_Notes__c</fullName>
    <label>Previous Challenges Recruitment Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>