force-app/main/default/objects/Application__c/fields/Previous_Challenges_Recruitment_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Previous_Challenges_Recruitment_Score_2__c</fullName>
    <label>Previous Challenges Recruitment Score 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>