force-app/main/default/objects/Application__c/fields/Previous_Challenges_Recruitment_Score__c.field-meta.xml
<CustomField>
    <fullName>Previous_Challenges_Recruitment_Score__c</fullName>
    <label>Previous Challenges Recruitment Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>