force-app/main/default/objects/Application__c/fields/Previous_Challenges_with_Recruitment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Challenges_with_Recruitment__c</fullName>
    <label>Previous Challenges with Recruitment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>