force-app/main/default/objects/Application__c/fields/Previous_Funding_Received__c.field-meta.xml
<CustomField>
    <fullName>Previous_Funding_Received__c</fullName>
    <label>Previous Funding Received</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>