force-app/main/default/objects/Application__c/fields/Previous_Support_Received__c.field-meta.xml
<CustomField>
    <fullName>Previous_Support_Received__c</fullName>
    <label>Previous Support Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>