force-app/main/default/objects/Application__c/fields/Previously_Applied__c.field-meta.xml
<CustomField>
    <fullName>Previously_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Applied</label>
    <type>Checkbox</type>
</CustomField>