force-app/main/default/objects/Application__c/fields/Primary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>