force-app/main/default/objects/Application__c/fields/Primary_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_Name__c</fullName>
    <formula
  >Primary_Approver__r.FirstName + &apos; &apos; + Primary_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Approver Name</label>
    <type>Text</type>
</CustomField>