force-app/main/default/objects/Application__c/fields/Program_Contact__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact__c</fullName>
    <label>Program Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>