force-app/main/default/objects/Application__c/fields/Program_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_Email__c</fullName>
    <label>Program Contact Email</label>
    <type>Email</type>
</CustomField>