force-app/main/default/objects/Application__c/fields/Program_Contact_Ext__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_Ext__c</fullName>
    <label>Program Contact Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>