force-app/main/default/objects/Application__c/fields/Program_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_First_Name__c</fullName>
    <label>Program Contact First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>