force-app/main/default/objects/Application__c/fields/Program_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_Mobile__c</fullName>
    <label>Program Contact Mobile</label>
    <type>Phone</type>
</CustomField>