force-app/main/default/objects/Application__c/fields/Program_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_Phone__c</fullName>
    <label>Program Contact Phone</label>
    <type>Phone</type>
</CustomField>