force-app/main/default/objects/Application__c/fields/Program_Contact_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_Prefix__c</fullName>
    <label>Program Contact Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>