force-app/main/default/objects/Application__c/fields/Program_Contact_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_Suffix__c</fullName>
    <label>Program Contact Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>