force-app/main/default/objects/Application__c/fields/Program_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_Title__c</fullName>
    <label>Program Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>