force-app/main/default/objects/Application__c/fields/Program_Development__c.field-meta.xml
<CustomField>
    <fullName>Program_Development__c</fullName>
    <label>Program Development</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>