force-app/main/default/objects/Application__c/fields/Program_Involves_Interaction_with_Minors__c.field-meta.xml
<CustomField>
    <fullName>Program_Involves_Interaction_with_Minors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Involves Interaction with Minors</label>
    <type>Checkbox</type>
</CustomField>