force-app/main/default/objects/Application__c/fields/Program_Min_Age_of_Youth__c.field-meta.xml
<CustomField>
    <fullName>Program_Min_Age_of_Youth__c</fullName>
    <label>Program Min Age of Youth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>