force-app/main/default/objects/Application__c/fields/Program_Number_of_Parent_in_Military__c.field-meta.xml
<CustomField>
    <fullName>Program_Number_of_Parent_in_Military__c</fullName>
    <label>Program Number of Parent in Military</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>