force-app/main/default/objects/Application__c/fields/Program_Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Program_Number_of_Sites__c</fullName>
    <label>Program Number of Sites</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>