force-app/main/default/objects/Application__c/fields/Program_Number_of_Youth_Served__c.field-meta.xml
<CustomField>
    <fullName>Program_Number_of_Youth_Served__c</fullName>
    <label>Program Number of Youth Served</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>