force-app/main/default/objects/Application__c/fields/Program_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Program_Objectives__c</fullName>
    <label>Program Objectives</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>