force-app/main/default/objects/Application__c/fields/Program_Objectives_Comments__c.field-meta.xml
<CustomField>
    <fullName>Program_Objectives_Comments__c</fullName>
    <label>Program Objectives Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>