force-app/main/default/objects/Application__c/fields/Program_Objectives_Score__c.field-meta.xml
<CustomField>
    <fullName>Program_Objectives_Score__c</fullName>
    <label>Program Objectives Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>