force-app/main/default/objects/Application__c/fields/Program_Percent_at_below_Poverty_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Percent_at_below_Poverty_Level__c</fullName>
    <label>Program Percent at/below Poverty Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>