force-app/main/default/objects/Application__c/fields/Program_Percent_Male__c.field-meta.xml
<CustomField>
    <fullName>Program_Percent_Male__c</fullName>
    <label>Program Percent Male</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>