force-app/main/default/objects/Application__c/fields/Program_Percent_Parent_in_Military__c.field-meta.xml
<CustomField>
    <fullName>Program_Percent_Parent_in_Military__c</fullName>
    <label>Program Percent Parent in Military</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>