force-app/main/default/objects/Application__c/fields/Program_Percent_Youth_Single_Parent_Home__c.field-meta.xml
<CustomField>
    <fullName>Program_Percent_Youth_Single_Parent_Home__c</fullName>
    <label>Program Percent Youth Single-Parent Home</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>