force-app/main/default/objects/Application__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>