force-app/main/default/objects/Application__c/fields/R1_Email__c.field-meta.xml
<CustomField>
    <fullName>R1_Email__c</fullName>
    <label>R1 Email</label>
    <type>Email</type>
</CustomField>