force-app/main/default/objects/Application__c/fields/R1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>R1_Last_Name__c</fullName>
    <label>R1 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>