force-app/main/default/objects/Application__c/fields/R1_Phone__c.field-meta.xml
<CustomField>
    <fullName>R1_Phone__c</fullName>
    <label>R1 Phone</label>
    <type>Phone</type>
</CustomField>