force-app/main/default/objects/Application__c/fields/R1_Relationship__c.field-meta.xml
<CustomField>
    <fullName>R1_Relationship__c</fullName>
    <label>R1 Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>