force-app/main/default/objects/Application__c/fields/R2_Email__c.field-meta.xml
<CustomField>
    <fullName>R2_Email__c</fullName>
    <label>R2 Email</label>
    <type>Email</type>
</CustomField>