force-app/main/default/objects/Application__c/fields/R2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>R2_Last_Name__c</fullName>
    <label>R2 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>