force-app/main/default/objects/Application__c/fields/R2_Phone__c.field-meta.xml
<CustomField>
    <fullName>R2_Phone__c</fullName>
    <label>R2 Phone</label>
    <type>Phone</type>
</CustomField>