force-app/main/default/objects/Application__c/fields/R2_Relationship__c.field-meta.xml
<CustomField>
    <fullName>R2_Relationship__c</fullName>
    <label>R2 Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>