force-app/main/default/objects/Application__c/fields/R3_Email__c.field-meta.xml
<CustomField>
    <fullName>R3_Email__c</fullName>
    <label>R3 Email</label>
    <type>Email</type>
</CustomField>