force-app/main/default/objects/Application__c/fields/R3_First_Name__c.field-meta.xml
<CustomField>
    <fullName>R3_First_Name__c</fullName>
    <label>R3 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>