force-app/main/default/objects/Application__c/fields/R3_Phone__c.field-meta.xml
<CustomField>
    <fullName>R3_Phone__c</fullName>
    <label>R3 Phone</label>
    <type>Phone</type>
</CustomField>