force-app/main/default/objects/Application__c/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <inlineHelpText
  >List three references and contact information</inlineHelpText>
    <label>References</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>