force-app/main/default/objects/Application__c/fields/Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities__c</fullName>
    <label>Responsibilities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>