force-app/main/default/objects/Application__c/fields/Responsible_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Reporting__c</fullName>
    <label>Responsible_Reporting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>