force-app/main/default/objects/Application__c/fields/Retention_Efforts_for_Youth__c.field-meta.xml
<CustomField>
    <fullName>Retention_Efforts_for_Youth__c</fullName>
    <label>Retention Efforts for Youth</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>