force-app/main/default/objects/Application__c/fields/Retention_Efforts_for_Youth_Notes__c.field-meta.xml
<CustomField>
    <fullName>Retention_Efforts_for_Youth_Notes__c</fullName>
    <label>Retention Efforts for Youth Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>