force-app/main/default/objects/Application__c/fields/Retention_Efforts_for_Youth_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Retention_Efforts_for_Youth_Score_2__c</fullName>
    <label>Retention Efforts for Youth Score 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>