force-app/main/default/objects/Application__c/fields/Retention_Efforts_for_Youth_Score__c.field-meta.xml
<CustomField>
    <fullName>Retention_Efforts_for_Youth_Score__c</fullName>
    <label>Retention Efforts for Youth Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>