force-app/main/default/objects/Application__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>