force-app/main/default/objects/Application__c/fields/Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Reviewers__c</fullName>
    <label>Reviewers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UA Reviewer One</fullName>
            </value>
            <value>
                <fullName>UA Reviewer Two</fullName>
            </value>
            <value>
                <fullName>UA Reviewer Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>