force-app/main/default/objects/Application__c/fields/Rural__c.field-meta.xml
<CustomField>
    <fullName>Rural__c</fullName>
    <label>Rural</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>