force-app/main/default/objects/Application__c/fields/School_Opening_and_Closing_Dates__c.field-meta.xml
<CustomField>
    <fullName>School_Opening_and_Closing_Dates__c</fullName>
    <label>School Opening and Closing Dates</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>