force-app/main/default/objects/Application__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>