force-app/main/default/objects/Application__c/fields/Sent_Back_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sent_Back_Reason__c</fullName>
    <label>Sent Back Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>