force-app/main/default/objects/Application__c/fields/Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Name__c</fullName>
    <label>Signatory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>