force-app/main/default/objects/Application__c/fields/Signatory_Title__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Title__c</fullName>
    <label>Signatory Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>