force-app/main/default/objects/Application__c/fields/Social_Media_Usernames__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Usernames__c</fullName>
    <label>Social Media Usernames</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>