force-app/main/default/objects/Application__c/fields/Sponsorship_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Request_Reason__c</fullName>
    <label>Sponsorship Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>