force-app/main/default/objects/Application__c/fields/Statement_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statement of Interest</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>