force-app/main/default/objects/Application__c/fields/Strategic_Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Plan_Amount__c</fullName>
    <label>Strategic Plan Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000-$100,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>