force-app/main/default/objects/Application__c/fields/Strategic_Plan_Victim_Services__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Plan_Victim_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Plan Victim Services</label>
    <type>Checkbox</type>
</CustomField>