force-app/main/default/objects/Application__c/fields/Suburban__c.field-meta.xml
<CustomField>
    <fullName>Suburban__c</fullName>
    <label>Suburban</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>