force-app/main/default/objects/Application__c/fields/Summary_Budget_Total__c.field-meta.xml
<CustomField>
    <fullName>Summary_Budget_Total__c</fullName>
    <formula
  >Personnel_Budget__c +  Fringe_Benefits_Budget__c +  Travel_Budget__c +  Supplies_Budget__c +  Contracts_Budget__c +  Contractor_Travel_Budget__c +  Other_Costs_Budget__c +  Indirect_Costs_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Budget Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>