force-app/main/default/objects/Application__c/fields/Supplies_Budget__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Budget__c</fullName>
    <label>Supplies Budget</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>