force-app/main/default/objects/Application__c/fields/Supplies_Description__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Description__c</fullName>
    <label>Supplies Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>