force-app/main/default/objects/Application__c/fields/Support_Years_and_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Support_Years_and_Contribution__c</fullName>
    <label>Support Years and Contribution</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>