force-app/main/default/objects/Application__c/fields/Sustainability__c.field-meta.xml
<CustomField>
    <fullName>Sustainability__c</fullName>
    <label>Sustainability</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>