force-app/main/default/objects/Application__c/fields/Team_Sports_Implementation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Team_Sports_Implementation_Plan__c</fullName>
    <label>Team Sports Implementation Plan</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>