force-app/main/default/objects/Application__c/fields/Terms_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Terms_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms Acknowledged</label>
    <type>Checkbox</type>
</CustomField>