force-app/main/default/objects/Application__c/fields/Timeline_for_Plans__c.field-meta.xml
<CustomField>
    <fullName>Timeline_for_Plans__c</fullName>
    <label>Timeline for Plans</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>