force-app/main/default/objects/Application__c/fields/Total_Project_Program_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Program_Budget__c</fullName>
    <label>Total Project/Program Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>